--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,7 +20,9 @@
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Django Geek</a>
+            <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">
+                <img src="{% static 'growth1.png' %}" height="35" width="35" class="d-inline-block aligh-top mr-2"/>
+                FinanceMarketNews</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,6 +35,7 @@
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                     {% else %}
